# CallMind

./: .env  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
chromadb_server/: app.py  database.py  models.py  test_chromadb_api.py
chromadb_server/chroma_db/: chroma.sqlite3
chromadb_utils/: utils.py
infobip/: app.py
mcp_server/: callmind_mcp.py  utils.py
twilio/: app.py
twilio_server/: app.py
